--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>The Meal</h1>
     <div id="search">
-        <input type="text" id="inputSrc" placeholder="enter the name of the dish">
+        <input type="text" id="inputSrc" placeholder="search for meals">
         <button id="btnSearch">Search</button>
     </div>
     <div id="ispisDiv"></div>
